--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -5,6 +5,7 @@ Dependencies:
 - 'on': ['@all']
   'require':
     'frameworks/extra-cmake-modules': '@latest'
+    'frameworks/kcodecs': '@latest'
     'pim/akonadi' : '@same'
     'pim/akonadi-mime' : '@same'
     'pim/kmailtransport' : '@same'
