--- a/src/designer/CMakeLists.txt
+++ b/src/designer/CMakeLists.txt
@@ -16,7 +16,7 @@ ecm_add_qtdesignerplugin(mailcommonwidgets
     LINK_LIBRARIES
     KF5::MailCommon
     KF5::Libkdepim
-    KF5::I18n
+    KF${KF_MAJOR_VERSION}::I18n
     INSTALL_DESTINATION "${KDE_INSTALL_QTPLUGINDIR}/designer"
     COMPONENT Devel
     )
