--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: CC0-1.0
 
 Dependencies:
-- 'on': ['@all']
+- 'on': ['Linux/Qt5', 'FreeBSD/Qt5', 'Windows/Qt5']
   'require':
     'frameworks/extra-cmake-modules': '@latest'
     'frameworks/kcodecs': '@latest'
@@ -14,3 +14,16 @@ Dependencies:
     'pim/mailimporter' : '@same'
     'pim/messagelib' : '@same'
     'pim/pimcommon' : '@same'
+
+- 'on': ['Linux/Qt6', 'FreeBSD/Qt6', 'Windows/Qt6']
+  'require':
+    'frameworks/extra-cmake-modules': '@latest-kf6'
+    'frameworks/kcodecs': '@latest-kf6'
+    'pim/akonadi' : '@latest-kf6'
+    'pim/akonadi-mime' : '@latest-kf6'
+    'pim/kmailtransport' : '@latest-kf6'
+    'pim/kmime' : '@latest-kf6'
+    'pim/libkdepim' : '@latest-kf6'
+    'pim/mailimporter' : '@latest-kf6'
+    'pim/messagelib' : '@latest-kf6'
+    'pim/pimcommon' : '@latest-kf6'
