Use new KPim<version>Mime

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,7 +50,7 @@ set(MAILCOMMON_LIB_VERSION ${PIM_VERSION})
 set(AKONADIMIME_LIB_VERSION "5.22.40")
 set(AKONADICONTACT_LIB_VERSION "5.22.40")
 set(MESSAGELIB_LIB_VERSION "5.22.40")
-set(KMIME_LIB_VERSION "5.22.40")
+set(KMIME_LIB_VERSION "5.22.41")
 set(KMAILTRANSPORT_LIB_VERSION "5.22.40")
 set(MAILIMPORTER_LIB_VERSION "5.22.40")
 set(LIBKDEPIM_LIB_VERSION "5.22.40")
@@ -95,7 +95,7 @@ find_package(KF5MessageComposer ${MESSAGELIB_LIB_VERSION} CONFIG REQUIRED)
 find_package(KF5MessageList ${MESSAGELIB_LIB_VERSION} CONFIG REQUIRED)
 find_package(KF5MessageCore ${MESSAGELIB_LIB_VERSION} CONFIG REQUIRED)
 find_package(KF5MessageViewer ${MESSAGELIB_LIB_VERSION} CONFIG REQUIRED)
-find_package(KF5Mime ${KMIME_LIB_VERSION} CONFIG REQUIRED)
+find_package(KPim${KF_MAJOR_VERSION}Mime ${KMIME_LIB_VERSION} CONFIG REQUIRED)
 find_package(KF5PimCommonAkonadi ${PIMCOMMON_LIB_VERSION} CONFIG REQUIRED)
 find_package(KF5TemplateParser ${MESSAGELIB_LIB_VERSION} CONFIG REQUIRED)
 find_package(Phonon4Qt${QT_MAJOR_VERSION} ${PHONON_LIB_VERSION} CONFIG REQUIRED)
