--- a/KF5MailCommonConfig.cmake.in
+++ b/KF5MailCommonConfig.cmake.in
@@ -2,7 +2,7 @@
 include(CMakeFindDependencyMacro)
 find_dependency(KF5Akonadi "@AKONADI_VERSION@")
 find_dependency(KF5AkonadiMime "@AKONADIMIME_LIB_VERSION@")
-find_dependency(KF5Libkdepim "@LIBKDEPIM_LIB_VERSION@")
+find_dependency(KPim@KF_MAJOR_VERSION@Libkdepim "@LIBKDEPIM_LIB_VERSION@")
 find_dependency(KF5MessageComposer "@MESSAGELIB_LIB_VERSION@")
 find_dependency(KF5PimCommon "@PIMCOMMON_LIB_VERSION@")
 find_dependency(KF@KF_MAJOR_VERSION@Completion "@KF_MIN_VERSION@")
