--- a/src/designer/CMakeLists.txt
+++ b/src/designer/CMakeLists.txt
@@ -15,7 +15,7 @@ ecm_add_qtdesignerplugin(mailcommonwidgets
     MailCommon::SearchPatternEdit
     LINK_LIBRARIES
     KF5::MailCommon
-    KF5::Libkdepim
+    KPim${KF_MAJOR_VERSION}::Libkdepim
     KF${KF_MAJOR_VERSION}::I18n
     INSTALL_DESTINATION "${KDE_INSTALL_QTPLUGINDIR}/designer"
     COMPONENT Devel
